fixed alignment issue

--- a/src/components/graph.css
+++ b/src/components/graph.css
@@ -7,5 +7,6 @@
 }
 
 .grid {
+  margin: 30px;
   font-size: 0;
 }
